# "asi_vulkan" - Aldaron's System Interface - Vulkan
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "asi_vulkan"
version = "0.8.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]
license = "BSL-1.0"
documentation = "https://docs.rs/asi_vulkan"
homepage = "https://plopgrizzly.com/asi_vulkan"
repository = "https://github.com/plopgrizzly/asi_vulkan"
readme = "readme.md"
description = "Interface with the Vulkan library"
keywords = ["vulkan"]
categories = ["rendering::graphics-api", "hardware-support",
	"api-bindings", "rendering", "external-ffi-bindings"]

[dependencies]
dl_api = "0.2"
awi = "0.7"

[features]
default = [] # ["checks"] # Un-comment for validation layers.
checks = []
